--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% assign _url = page.url | split: "/" %}
 {% assign current = _url[-1] | split: "." %}
-<header>
+<!-- <header>
   <nav>
     <ul>
       {% case current[0] %}
@@ -9,9 +9,9 @@
         <li class="btn-nav">Blog</li>
       </a>
       <li class="current">Portfolio</li>
-      {% else %}
+      {% else %} -->
       <!-- others -->
-      <a href="{{ site.url }}">
+      <!-- <a href="{{ site.url }}">
         <li class="current btn-nav">Blog</li>
       </a>
       <a href="{{ site.url }}/portfolio">
@@ -20,4 +20,4 @@
       {% endcase %}
     </ul>
   </nav>
-</header>
+</header> -->
