--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer>
   <div class="footer">
-    Copyright © 2019
-    <a href="https://github.com/jenniferlukk">Nayeong Kim</a>.
+    <a href="https://github.com/jenniferlukk">Jennifer Luk</a>.
     Powered by Jekyll with
     <a href="https://github.com/naye0ng/Grape-Theme">Grape Theme</a>.
   </div>
