--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -24,7 +24,7 @@ layout: page
     <div class="bg"></div>
   </section>
   <!-- career section -->
-  <section id="career" class="row">
+  <!-- <section id="career" class="row">
     <article class="exper col-12 col-md-6">
       <p class="title">EXPERIENCE</p>
       <ul class="exper-list">
@@ -51,7 +51,7 @@ layout: page
         {% endfor %}
       </ul>
     </article>
-  </section>
+  </section> -->
 
   {% include projects.html %}
 </div>
