--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-{% assign _url = page.url | split: "/" %}
-{% assign current = _url[-1] | split: "." %}
+<!-- {% assign _url = page.url | split: "/" %}
+{% assign current = _url[-1] | split: "." %} -->
 <!-- <header>
   <nav>
     <ul>
