--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,2 @@
-<!-- {% assign _url = page.url | split: "/" %}
-{% assign current = _url[-1] | split: "." %} -->
-<!-- <header>
-  <nav>
-    <ul>
-      {% case current[0] %}
-      {% when 'portfolio'%}
-      <a href="{{ site.url }}">
-        <li class="btn-nav">Blog</li>
-      </a>
-      <li class="current">Portfolio</li>
-      {% else %} -->
-      <!-- others -->
-      <!-- <a href="{{ site.url }}">
-        <li class="current btn-nav">Blog</li>
-      </a>
-      <a href="{{ site.url }}/portfolio">
-        <li class="btn-nav">Portfolio</li>
-      </a>
-      {% endcase %}
-    </ul>
-  </nav>
-</header> -->
+<header>
+</header>
