--- a/_sass/layouts/_projects.scss
+++ b/_sass/layouts/_projects.scss
@@ -1,26 +1,32 @@
-#post{
+#project {
     @extend %page-padding;
-    .post-header{
-        padding-bottom : 60px;
+
+    .project-header {
+        padding-bottom: 60px;
         text-align: center;
-        .title{
+
+        .title {
             margin-bottom: 0px;
         }
-        .subtitle{
-            font-size : 1.2rem;
+
+        .subtitle {
+            font-size: 1.2rem;
         }
-        .meta{
-            color : $text-gray;
+
+        .meta {
+            color: $text-gray;
             font-size: 0.85rem;
-            margin-top : 15px;
+            margin-top: 15px;
         }
     }
-    .post-content{
+
+    .project-content {
         overflow: hidden;
         margin-bottom: 100px;
     }
 }
-.top-btn{
+
+.top-btn {
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
     -ms-transition-duration: 0.5s;
@@ -32,35 +38,41 @@
     -o-transition-property: opacity;
     transition-property: opacity;
     opacity: 0;
-    display:none;
-    position:fixed;
-    bottom:10%;
+    display: none;
+    position: fixed;
+    bottom: 10%;
     right: 15%;
+
     @media (max-width: 991px) {
         right: 10%;
     }
+
     @media (max-width: 576px) {
         right: 2%;
     }
+
     width: 45px;
     height: 45px;
     background-color: $theme-dark;
-    color : rgba(0,0,0,0.7);
+    color: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
     text-align: center;
     line-height: 2.4rem;
-    color:#fff;
+    color: #fff;
+
     i {
-        color:#fff;
+        color: #fff;
     }
 }
-.top-btn:hover{
+
+.top-btn:hover {
     background-color: $theme-dark2;
 }
 
-#comments{
+#project-comments {
     @extend %page-padding;
-    div.border{
+
+    div.border {
         border-top: 1px solid #e7e9ee;
     }
 }
