--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     <aside id="aside" class="col-md-4">
       {% include aside.html %}
     </aside>
-    <!-- Post List -->
+    <!-- Projects List -->
     <section id="projects" class="col-md-8">
       {% for project in site.data.project %}
       <div class="project">
