--- a/_sass/_grape-theme.scss
+++ b/_sass/_grape-theme.scss
@@ -9,7 +9,7 @@
 
 // Layout 
 @import 'layouts/home';
-@import 'layouts/post';
+@import 'layouts/projects';
 
 // Include 
 @import 'includes/header';
