--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
     </aside>
     <!-- Projects List -->
     <section id="projects" class="col-md-8">
-      {% for project in site.data.project %}
+      {% for project in site.data.projects %}
       <div class="project">
         <a href="{{ project.url }}">
           <div class="project-wrap">
