--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -2,7 +2,7 @@
 <div id="profile">
   {% assign profile = site.theme_settings.profile %}
   <div class="img-wrap">
-    <img src="{{ site.baseurl }}/{{ profile.image }}" alt="profile-image">
+    <img src="{{ site.baseurl }}/{{ profile.image }}" alt="profile-image" width="180" height="180"> 
   </div>
   <p class="username">{{ profile.username }}</p>
   <p class="description">{{ profile.description }}</p>
